hotels details and compressing images

--- a/app/hotels-search.html
+++ b/app/hotels-search.html
@@ -88,12 +88,12 @@
       </div>
     </div>
     <div class="hotel-page p-t-70">
-      <div class="hotel-search-page sidebar-hotel">
+      <div class="hotel-search-page">
         <div class="wrapping-gray"></div>
         <div class="container display-table">
           <div class="aside display-cell pull-right">
             <h2 class="f-bold text-md text-u-c m-t-xs">Narrow Your Results</h2>
-            <form action="GET" class="filtering sapta-form">
+            <form action="#" method="GET" class="filtering sapta-form">
               <div class="boxing selectbox b m-t-md pos-rlt m-b-xl">
                 <label class="block text-xs">Area</label>
                 <select name="areas">
@@ -188,7 +188,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">3,967,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">3,967,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
                 <div class="clearfix"></div>
               </div>
@@ -201,7 +201,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill-half"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,950,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,950,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
               <div class="hotem-item m-b-md">
@@ -213,7 +213,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,900,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,900,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
               <div class="hotem-item m-b-md">
@@ -225,7 +225,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill-half"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
               <div class="hotem-item m-b-md">
@@ -237,7 +237,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill-half"></i><i class="ico ico-rating ico-rating"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
               <div class="hotem-item m-b-md">
@@ -249,7 +249,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill-half"></i><i class="ico ico-rating ico-rating"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
               <div class="hotem-item m-b-md">
@@ -261,7 +261,7 @@
                   <div class="block rating-count bg-white"><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill"></i><i class="ico ico-rating ico-rating-fill-half"></i><i class="ico ico-rating ico-rating"></i></div>
                 </div>
                 <div class="column pull-left pricing">
-                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="#" class="btn f-bold text-primary">See Details</a>
+                  <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
             </div>
