photo gallery for hotels

--- a/app/hotel-detail.html
+++ b/app/hotel-detail.html
@@ -146,7 +146,113 @@
               </div>
               <div class="col-md-3"><span class="block hotel-rating bg-white text-right"><i class="ico ico-rating ico-rating-big ico-rating-big-fill"></i><i class="ico ico-rating ico-rating-big ico-rating-big-fill"></i><i class="ico ico-rating ico-rating-big ico-rating-big-fill"></i><i class="ico ico-rating ico-rating-big ico-rating-big-fill"></i><i class="ico ico-rating ico-rating-big ico-rating-big-fill"></i></span><span class="review-count block text-yellow text-right">1234 Reviews</span></div>
             </div>
-            <div class="choose-room m-t-xl b-dashed-t-gray">
+            <div class="hotel-photo-gallery b-dashed-b-gray">
+              <div id="gallery-slider" class="flexslider">
+                <ul class="slides">
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/hotel_heroimg.jpg" alt="">
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content pos-rlt">
+                      <div class="wrapper-md text-center">
+                        <div class="block m-b-sm m-t-sm">"Ocean View, Swimming Pools, Accomodating staff, there’s just so much..."</div><span class="f-bold block">Zurin, Malaysia</span><span class="f-bold block">Dec 2014</span><a href="#" class="inline text-u-c m-t-md text-yellow">See All 1234 Reviews</a>
+                      </div><img src="img/destinations/Korea.jpg" alt="">
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div id="gallery-slider-carousel" class="flexslider">
+                <ul class="slides">
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                  <li><img src="img/destinations/hotel_heroimg.jpg" alt=""></li>
+                  <li><img src="img/destinations/Korea.jpg" alt=""></li>
+                </ul>
+              </div>
+            </div>
+            <div class="choose-room m-t-xl">
               <h3 class="head-title text-c-l text-rounded m-b-lg m-t-lg">Choose&nbsp;<span class="text-orange">Your Rooms</span></h3>
               <form action="#" method="GET" class="choose-date sapta-form">
                 <div class="boxing check-in b m-b-md m-r-sm pull-left">
