--- a/app/hotels-search.html
+++ b/app/hotels-search.html
@@ -341,7 +341,7 @@
       </div>
     </div>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/libs/jquery.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/sapta-tour.js"></script>
