--- a/app/hotel-detail.html
+++ b/app/hotel-detail.html
@@ -315,7 +315,7 @@
                     <label class="block f-bold text-u-c text-center">Room</label><span class="block bg-white pos-rlt text-center m-t-sm increase"><i class="ico ico-up-circle-arrow"></i></span><span class="block bg-white pos-rlt text-center">
                       <input type="text" value="1" size="1" maxlength="1" readonly="readonly" class="inline text-center no-border m-b-xs"></span><span class="block bg-white pos-rlt text-center decrease"><i class="ico ico-down-circle-arrow"></i></span>
                   </div>
-                  <div class="column pull-left pricing"><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,050,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a></div>
+                  <div class="column pull-left pricing"><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,050,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-payment-step-3.html" class="btn f-bold text-primary">See Details</a></div>
                 </div>
                 <div class="room-item m-b-md">
                   <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/room05.jpg" alt=""></a></div>
@@ -329,7 +329,7 @@
                     <label class="block f-bold text-u-c text-center">Room</label><span class="block bg-white pos-rlt text-center m-t-sm increase"><i class="ico ico-up-circle-arrow"></i></span><span class="block bg-white pos-rlt text-center">
                       <input type="text" value="1" size="1" maxlength="1" readonly="readonly" class="inline text-center no-border m-b-xs"></span><span class="block bg-white pos-rlt text-center decrease"><i class="ico ico-down-circle-arrow"></i></span>
                   </div>
-                  <div class="column pull-left pricing"><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,950,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a></div>
+                  <div class="column pull-left pricing"><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,950,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-payment-step-3.html" class="btn f-bold text-primary">See Details</a></div>
                 </div>
               </div><a href="#" class="block m-t-lg m-t-lg btn-show-more">Show 3 More&nbsp;<strong class="f-bold">Available Room Types</strong></a>
             </div>
