--- a/app/my-credit-card.html
+++ b/app/my-credit-card.html
@@ -137,19 +137,19 @@
                           <div class="form-group">
                             <label class="m-b-none">Select Card Type:</label>
                           </div>
-                          <div class="checkbox m-l-md m-r-xs">
+                          <div class="radio m-l-md m-r-xs">
                             <label>
-                              <input type="checkbox" value="visa"><img src="img/card-visa.png" alt="Visa Card" width="50" class="m-l-sm">
+                              <input type="radio" value="visa"><img src="img/card-visa.png" alt="Visa Card" width="50" class="m-l-sm">
                             </label>
                           </div>
-                          <div class="checkbox m-l-sm m-r-xs">
+                          <div class="radio m-l-sm m-r-xs">
                             <label>
-                              <input type="checkbox" value="master-card"><img src="img/card-master-card.png" alt="Master Card" width="50" class="m-l-sm">
+                              <input type="radio" value="master-card"><img src="img/card-master-card.png" alt="Master Card" width="50" class="m-l-sm">
                             </label>
                           </div>
-                          <div class="checkbox m-l-sm">
+                          <div class="radio m-l-sm">
                             <label>
-                              <input type="checkbox" value="american-express"><img src="img/card-american-express.png" alt="American Express Card" width="50" class="m-l-sm">
+                              <input type="radio" value="american-express"><img src="img/card-american-express.png" alt="American Express Card" width="50" class="m-l-sm">
                             </label>
                           </div>
                           <div class="clearfix"></div>
@@ -266,19 +266,19 @@
                           <div class="form-group">
                             <label class="m-b-none">Select Card Type:</label>
                           </div>
-                          <div class="checkbox m-l-md m-r-xs">
+                          <div class="radio m-l-md m-r-xs">
                             <label>
-                              <input type="checkbox" value="visa"><img src="img/card-visa.png" alt="Visa Card" width="50" class="m-l-sm">
+                              <input type="radio" value="visa"><img src="img/card-visa.png" alt="Visa Card" width="50" class="m-l-sm">
                             </label>
                           </div>
-                          <div class="checkbox m-l-sm m-r-xs">
+                          <div class="radio m-l-sm m-r-xs">
                             <label>
-                              <input type="checkbox" value="master-card"><img src="img/card-master-card.png" alt="Master Card" width="50" class="m-l-sm">
+                              <input type="radio" value="master-card"><img src="img/card-master-card.png" alt="Master Card" width="50" class="m-l-sm">
                             </label>
                           </div>
-                          <div class="checkbox m-l-sm">
+                          <div class="radio m-l-sm">
                             <label>
-                              <input type="checkbox" value="american-express"><img src="img/card-american-express.png" alt="American Express Card" width="50" class="m-l-sm">
+                              <input type="radio" value="american-express"><img src="img/card-american-express.png" alt="American Express Card" width="50" class="m-l-sm">
                             </label>
                           </div>
                           <div class="clearfix"></div>
