--- a/app/tour-detail.html
+++ b/app/tour-detail.html
@@ -104,7 +104,7 @@
       <div id="summary" class="feature-summary">
         <div class="container">
           <div class="first-col pull-left">
-            <h4 class="m-t-none text-darker title-summary">Chateaux, chic beach resorts, cheese and wine</h4><a href="#" class="m-t-lg btn btn-primary btn-s-xl book-now">Book Now</a>
+            <h4 class="m-t-none text-darker title-summary">Chateaux, chic beach resorts, cheese and wine</h4><a href="booking.html" class="m-t-lg btn btn-primary btn-s-xl book-now">Book Now</a>
           </div>
           <div class="second-col pull-left">
             <div class="summary-text">
