--- a/app/flight-outbound.html
+++ b/app/flight-outbound.html
@@ -111,7 +111,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_airasia.png" alt="" class="block m-auto"/><span class="block">Air Asia</span></div>
@@ -132,7 +132,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_airasia.png" alt="" class="block m-auto"/><span class="block">Citilink</span></div>
@@ -152,7 +152,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_citilink.png" alt="" class="block m-auto"/><span class="block">Citilink</span></div>
@@ -173,7 +173,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_citilink.png" alt="" class="block m-auto"/><span class="block">Citilink</span></div>
@@ -193,7 +193,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_lion.png" alt="" class="block m-auto"/><span class="block">Lion Air</span></div>
@@ -213,7 +213,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_lion.png" alt="" class="block m-auto"/><span class="block">Lion Air</span></div>
@@ -234,7 +234,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_lion.png" alt="" class="block m-auto"/><span class="block">Lion Air</span></div>
@@ -254,7 +254,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_garuda.png" alt="" class="block m-auto"/><span class="block">Garuda Indonesia</span></div>
@@ -275,7 +275,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
         <div class="flight-item m-b-sm">
           <div class="arline column b-r pull-left"><img src="img/icon_garuda.png" alt="" class="block m-auto"/><span class="block">Garuda Indonesia</span></div>
@@ -296,7 +296,7 @@
             <label class="text-u-c block">Total Price</label><span class="block m-t-xs"><span class="inline currency">Rp</span><span class="inline price"> 967,000</span></span>
             <label class="light">per person</label>
           </div>
-          <div class="button column pull-left text-center"><a href="flight-inbound.html" class="block pos-rlt">Select Flight</a></div>
+          <div class="button column pull-left text-center"><a href="#selectedFlights" class="block pos-rlt">Select Flight</a></div>
         </div>
       </div>
       <div class="container text-center m-t-lg"><a href="#" class="btn btn-white m-auto"><span class="block m-r-md m-l-md">Load More Result</span></a></div>
