home page mobile

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -56,43 +56,51 @@
         </ul>
         <div class="clearfix"></div>
       </div>
-      <div id="main-wrap">
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
-        <p>Here's an easy way to create an iOS style, side sliding menu</p>
+      <div id="main-wrap" class="pos-rlt">
+        <div class="top-banner home">
+          <h3 class="banner-title text-u-c text-center">Don’t miss our lebaran promo</h3>
+        </div>
+        <div class="featured-destination-list">
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/Turkey.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Turkey Adventure</h4><span class="inline location">MIddle East</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/Japan.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Japanese Essentials</h4><span class="inline location">Asia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1500</span></span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/pucket.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Bangkok Phuket</h4><span class="inline location">Asia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/France.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">French Riviera</h4><span class="inline location">Europe</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 3000</span></span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/China.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Asia Delight</h4><span class="inline location">China</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/Jawa.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Karimun Jawa Experience</h4><span class="inline location">Indonesia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1500</span></span>
+            </div>
+          </div>
+        </div>
+        <div class="spinner-block">
+          <div class="spinner">Loading...</div>
+        </div>
       </div>
       <footer>
         <div class="block m-r-sm m-l-sm text-u-c">&copy; 2015 Sapta Tour.&nbsp;<a href="#">Terms &amp; Conditions</a></div>
